# python-cli-template

./: README.md  pyproject.toml  ruff.toml
app_name/: __main__.py  cli.py
